exports[`<AccountForm /> should render a form 1`] = `
<form
  className="form-horizontal"
  onSubmit={[Function]}>
  <Field
    component={[Function]}
    id="account__email"
    label="Adresse électronique"
    labelClassName="col-sm-4"
    name="email"
    type="email"
    wrapperClassName="col-sm-6" />
  <p
    className="small excerpt col-sm-6 col-sm-offset-4">
    Votre adresse électronique ne sera pas rendue publique.
  </p>
</form>
`;

exports[`<AccountForm /> should render a form with an alert if submitted password is wrong 1`] = `
<form
  className="form-horizontal"
  onSubmit={[Function]}>
  <Alert
    bsClass="alert"
    bsStyle="danger"
    closeLabel="Close Alert">
    <p>
      Mot de passe incorrect ! Entrez votre mot de passe actuel pour modifier votre email.
    </p>
  </Alert>
  <Field
    component={[Function]}
    id="account__email"
    label="Adresse électronique"
    labelClassName="col-sm-4"
    name="email"
    type="email"
    wrapperClassName="col-sm-6" />
  <p
    className="small excerpt col-sm-6 col-sm-offset-4">
    Votre adresse électronique ne sera pas rendue publique.
  </p>
</form>
`;

exports[`<AccountForm /> should render a form with an info if a confirmation email has been resent 1`] = `
<form
  className="form-horizontal"
  onSubmit={[Function]}>
  <Alert
    bsClass="alert"
    bsStyle="warning"
    closeLabel="Close Alert">
    <p>
      Un email de confirmation vous a été envoyé.
    </p>
  </Alert>
  <Field
    component={[Function]}
    id="account__email"
    label="Adresse électronique"
    labelClassName="col-sm-4"
    name="email"
    type="email"
    wrapperClassName="col-sm-6" />
  <p
    className="small excerpt col-sm-6 col-sm-offset-4">
    Votre adresse électronique ne sera pas rendue publique.
  </p>
  <div
    className="col-sm-6 col-sm-offset-4">
    <p
      className="small excerpt">
      <FormattedHTMLMessage
        email="new-email@test.com"
        message="Vérifiez votre email (<strong>{email}</strong>) pour confirmer votre nouvelle adresse. Jusqu\'à ce que vous confirmez, les notifications continueront d\'être envoyées à votre adresse email actuelle."
        tagName="span" />
    </p>
    <ButtonToolbar
      bsClass="btn-toolbar">
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="link"
        disabled={false}
        navDropdown={false}
        navItem={false}
        onClick={[Function]}>
        Renvoyer la confirmation
      </Button>
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="link"
        disabled={false}
        navDropdown={false}
        navItem={false}
        onClick={[Function]}>
        Annuler cette modification
      </Button>
    </ButtonToolbar>
  </div>
</form>
`;

exports[`<AccountForm /> should render a form with information about new email 1`] = `
<form
  className="form-horizontal"
  onSubmit={[Function]}>
  <Field
    component={[Function]}
    id="account__email"
    label="Adresse électronique"
    labelClassName="col-sm-4"
    name="email"
    type="email"
    wrapperClassName="col-sm-6" />
  <p
    className="small excerpt col-sm-6 col-sm-offset-4">
    Votre adresse électronique ne sera pas rendue publique.
  </p>
  <div
    className="col-sm-6 col-sm-offset-4">
    <p
      className="small excerpt">
      <FormattedHTMLMessage
        email="new-email@test.com"
        message="Vérifiez votre email (<strong>{email}</strong>) pour confirmer votre nouvelle adresse. Jusqu\'à ce que vous confirmez, les notifications continueront d\'être envoyées à votre adresse email actuelle."
        tagName="span" />
    </p>
    <ButtonToolbar
      bsClass="btn-toolbar">
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="link"
        disabled={false}
        navDropdown={false}
        navItem={false}
        onClick={[Function]}>
        Renvoyer la confirmation
      </Button>
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="link"
        disabled={false}
        navDropdown={false}
        navItem={false}
        onClick={[Function]}>
        Annuler cette modification
      </Button>
    </ButtonToolbar>
  </div>
</form>
`;
